--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@
                     <a href="https://vip-haustechnik.de/" target="_blank"><img src="img/vip_haustechnik.png" alt="Logo von V. i. P. Haustechnik" class="mx-auto grayscale hover:grayscale-0 transition duration-300"></a>
                     <a href="http://pixelgipfel.ch" target="_blank"><img src="img/pixelgipfel.png" alt="Logo von Pixelgipfel" class="mx-auto grayscale hover:grayscale-0 transition duration-300"></a>
                     <a href="http://horstmann-orthoschuh.de" target="_blank"><img src="img/horstmann.png" alt="Logo von Horstmann Orthopädie-Schuhtechnik" class="mx-auto grayscale hover:grayscale-0 transition duration-300"></a>
+					<a href="http://horstmann-orthoschuh.de" target="_blank"><img src="img/horstmann.png" alt="Logo von Horstmann Orthopädie-Schuhtechnik" class="mx-auto grayscale hover:grayscale-0 transition duration-300"></a>
                 </div>
             </div>
 
@@ -667,3 +668,4 @@
     </script>
 </body>
 </html>
+
