--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
                 <p class="mt-4 text-lg text-gray-600 max-w-2xl mx-auto">Haben Sie ein Projekt im Sinn? Ich freue mich auf Ihre Nachricht.</p>
             </div>
             <div class="max-w-2xl mx-auto bg-white p-8 rounded-lg shadow-lg">
-                <form action="https://formspree.io/f/xblkkvww" method="POST" class="space-y-6">
+                <form action="https://formspree.io/f/xldwkwak" method="POST" class="space-y-6">
                     <div>
                         <label for="name" class="block text-gray-700 font-bold mb-2">Name</label>
                         <input type="text" id="name" name="name" class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-[var(--color-secondary)]" required>
@@ -668,5 +668,6 @@
     </script>
 </body>
 </html>
+
 
 
