--- a/index.html
+++ b/index.html
@@ -494,6 +494,15 @@
 
         // --- Portfolio Logic (Original content restored and slightly shortened for clarity) ---
         const portfolioData = {
+			pfotencard: {
+    title: "Pfotencard – Verwaltungssystem für Hundeschulen",
+    shortDesc: "Full-Stack Web-App zur Verwaltung einer Hundeschule inkl. Kunden, digitalem Wertkarten-System und Kursfortschritt. Live-Demo unter pfotencard.joos-soft-solutions.de",
+    longDesc: `<h4 class="text-xl font-bold text-[var(--color-primary)] mb-4">Projekt: PfotenCard Verwaltung</h4>
+<p class="text-gray-700 mb-4">Die PfotenCard ist eine vollständige Web-Anwendung für die Verwaltung einer Hundeschule. Sie digitalisiert das klassische Wertkarten-System und kombiniert es mit einem detaillierten Level-System, um den Fortschritt der Mensch-Hund-Teams zu verfolgen.</p>
+<p class="mt-4"><a href="https://pfotencard.joos-soft-solutions.de" target="_blank" rel="noopener noreferrer" class="inline-block bg-[var(--color-secondary)] text-white py-2 px-4 rounded-full font-bold hover:opacity-90">Zur Webseite (Live-Demo)</a></p>
+<p class="text-gray-700 mt-4">Die App bietet rollenbasierte Ansichten für Admins, Mitarbeiter und Kunden. Kernfunktionen sind die Transaktionsverwaltung (Aufladungen, Boni, Abbuchungen), ein mehrstufiges Level-System mit Anforderungs-Tracking und ein Reporting-Dashboard. Der Tech-Stack nutzt React/Vite im Frontend und ein Python-Backend mit FastAPI und SQLAlchemy.</p>`,
+    images: []
+},
             angebotsprogramm: {
                 title: "Angebotsprogramm (Desktop-App)",
                 shortDesc: "Intuitive Desktop-Anwendung zur schnellen und präzisen Angebotserstellung für KMUs im Bereich Haustechnik mit 3D-Visualisierung und Offline-Modus.",
@@ -668,6 +677,7 @@
     </script>
 </body>
 </html>
+
 
 
 
