--- a/index.html
+++ b/index.html
@@ -287,44 +287,55 @@
         </section>
 
         <section id="portfolio">
-            <div id="portfolio-gallery">
-                <div class="text-center mb-12">
-                    <h2 class="text-3xl md:text-4xl font-bold text-[var(--color-primary)]">Portfolio</h2>
-                    <p class="mt-4 text-lg text-gray-600 max-w-2xl mx-auto">Ein Einblick in unsere realisierten Projekte.</p>
-                </div>
-                <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
-                    <div class="portfolio-item group cursor-pointer" onclick="showPortfolioDetail('angebotsprogramm')">
-                        <div class="relative overflow-hidden rounded-lg shadow-md">
-                            <img src="https://placehold.co/600x400/1a365d/ffffff?text=Angebotsprogramm" alt="Vorschaubild Projekt Angebotsprogramm für Haustechnik" class="w-full h-full object-cover transform group-hover:scale-110 transition-transform duration-500">
-                            <div class="absolute inset-0 bg-black bg-opacity-40 group-hover:bg-opacity-20 transition-all duration-500"></div>
-                            <div class="absolute bottom-0 left-0 p-6 text-white">
-                                <h3 class="text-xl font-bold">Angebotsprogramm (Desktop-App)</h3>
-                                <p class="opacity-0 group-hover:opacity-100 transition-opacity duration-300 mt-1 text-sm">Mehr erfahren &rarr;</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="portfolio-item group cursor-pointer" onclick="showPortfolioDetail('migrationstool')">
-                        <div class="relative overflow-hidden rounded-lg shadow-md">
-                            <img src="https://placehold.co/600x400/38b2ac/ffffff?text=Datenmigration" alt="Vorschaubild Projekt Datenmigrationstool für ERP-Systeme" class="w-full h-full object-cover transform group-hover:scale-110 transition-transform duration-500">
-                            <div class="absolute inset-0 bg-black bg-opacity-40 group-hover:bg-opacity-20 transition-all duration-500"></div>
-                            <div class="absolute bottom-0 left-0 p-6 text-white">
-                                <h3 class="text-xl font-bold">Datenmigrationstool</h3>
-                                <p class="opacity-0 group-hover:opacity-100 transition-opacity duration-300 mt-1 text-sm">Mehr erfahren &rarr;</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="portfolio-item group cursor-pointer" onclick="showPortfolioDetail('aktienanalyse')">
-                        <div class="relative overflow-hidden rounded-lg shadow-md">
-                             <img src="https://placehold.co/600x400/1a365d/ffffff?text=Aktienanalyse" alt="Vorschaubild Projekt Aktienmarkt-Analyse-Software mit Heatmaps" class="w-full h-full object-cover transform group-hover:scale-110 transition-transform duration-500">
-                            <div class="absolute inset-0 bg-black bg-opacity-40 group-hover:bg-opacity-20 transition-all duration-500"></div>
-                            <div class="absolute bottom-0 left-0 p-6 text-white">
-                                <h3 class="text-xl font-bold">Aktienmarkt-Analyse-Software</h3>
-                                <p class="opacity-0 group-hover:opacity-100 transition-opacity duration-300 mt-1 text-sm">Mehr erfahren &rarr;</p>
-                            </div>
-                        </div>
-                    </div>
+           <div id="portfolio-gallery">
+    <div class="text-center mb-12">
+        <h2 class="text-3xl md:text-4xl font-bold text-[var(--color-primary)]">Portfolio</h2>
+        <p class="mt-4 text-lg text-gray-600 max-w-2xl mx-auto">Ein Einblick in unsere realisierten Projekte.</p>
+    </div>
+    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
+        
+        <div class="portfolio-item group cursor-pointer" onclick="showPortfolioDetail('pfotencard')">
+            <div class="relative overflow-hidden rounded-lg shadow-md">
+                <img src="https://placehold.co/600x400/38b2ac/ffffff?text=Pfotencard" alt="Vorschaubild Projekt Pfotencard Hundeschule" class="w-full h-full object-cover transform group-hover:scale-110 transition-transform duration-500">
+                <div class="absolute inset-0 bg-black bg-opacity-40 group-hover:bg-opacity-20 transition-all duration-500"></div>
+                <div class="absolute bottom-0 left-0 p-6 text-white">
+                    <h3 class="text-xl font-bold">Pfotencard – Verwaltungssystem für Hundeschulen</h3>
+                    <p class="opacity-0 group-hover:opacity-100 transition-opacity duration-300 mt-1 text-sm">Mehr erfahren &rarr;</p>
                 </div>
             </div>
+        </div>
+        <div class="portfolio-item group cursor-pointer" onclick="showPortfolioDetail('angebotsprogramm')">
+            <div class="relative overflow-hidden rounded-lg shadow-md">
+                <img src="https://placehold.co/600x400/1a365d/ffffff?text=Angebotsprogramm" alt="Vorschaubild Projekt Angebotsprogramm für Haustechnik" class="w-full h-full object-cover transform group-hover:scale-110 transition-transform duration-500">
+                <div class="absolute inset-0 bg-black bg-opacity-40 group-hover:bg-opacity-20 transition-all duration-500"></div>
+                <div class="absolute bottom-0 left-0 p-6 text-white">
+                    <h3 class="text-xl font-bold">Angebotsprogramm (Desktop-App)</h3>
+                    <p class="opacity-0 group-hover:opacity-100 transition-opacity duration-300 mt-1 text-sm">Mehr erfahren &rarr;</p>
+                </div>
+            </div>
+        </div>
+        <div class="portfolio-item group cursor-pointer" onclick="showPortfolioDetail('migrationstool')">
+            <div class="relative overflow-hidden rounded-lg shadow-md">
+                <img src="https://placehold.co/600x400/38b2ac/ffffff?text=Datenmigration" alt="Vorschaubild Projekt Datenmigrationstool für ERP-Systeme" class="w-full h-full object-cover transform group-hover:scale-110 transition-transform duration-500">
+                <div class="absolute inset-0 bg-black bg-opacity-40 group-hover:bg-opacity-20 transition-all duration-500"></div>
+                <div class="absolute bottom-0 left-0 p-6 text-white">
+                    <h3 class="text-xl font-bold">Datenmigrationstool</h3>
+                    <p class="opacity-0 group-hover:opacity-100 transition-opacity duration-300 mt-1 text-sm">Mehr erfahren &rarr;</p>
+                </div>
+            </div>
+        </div>
+        <div class="portfolio-item group cursor-pointer" onclick="showPortfolioDetail('aktienanalyse')">
+            <div class="relative overflow-hidden rounded-lg shadow-md">
+                <img src="https://placehold.co/600x400/1a365d/ffffff?text=Aktienanalyse" alt="Vorschaubild Projekt Aktienmarkt-Analyse-Software mit Heatmaps" class="w-full h-full object-cover transform group-hover:scale-110 transition-transform duration-500">
+                <div class="absolute inset-0 bg-black bg-opacity-40 group-hover:bg-opacity-20 transition-all duration-500"></div>
+                <div class="absolute bottom-0 left-0 p-6 text-white">
+                    <h3 class="text-xl font-bold">Aktienmarkt-Analyse-Software</h3>
+                    <p class="opacity-0 group-hover:opacity-100 transition-opacity duration-300 mt-1 text-sm">Mehr erfahren &rarr;</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
             <div id="portfolio-detail" class="hidden">
                  <button onclick="showPortfolioGallery()" class="mb-8 inline-flex items-center text-[var(--color-secondary)] font-bold hover:underline">
@@ -677,6 +688,7 @@
     </script>
 </body>
 </html>
+
 
 
 
