--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="author" content="Mika Joos" />
     <meta name="robots" content="index, follow" />
+    <link rel="icon" type="image/png" href="/logo_icon.png" />
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
