--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="author" content="Mika Joos" />
     <meta name="robots" content="index, follow" />
-    <link rel="icon" type="image/png" href="/logo_icon.png" />
+    <link rel="icon" type="image/png" href="src/assets/logo_icon.png" />
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
@@ -46,7 +46,7 @@
       },
       "url": "https://www.joos-soft-solutions.de",
       "telephone": "+4901633058605",
-      "email": "kontakt@joos-soft-solutions.de",
+      "email": "mika.joos@joos-soft-solutions.de",
       "priceRange": "$$",
       "openingHoursSpecification": {
         "@type": "OpeningHoursSpecification",
