--- a/index.html
+++ b/index.html
@@ -33,18 +33,7 @@
       "name": "Joos Soft Solutions",
       "image": "https://www.joos-soft-solutions.de/logo_icon.png",
       "description": "Maßgeschneiderte Full-Stack Web-Apps, effiziente Desktop-Anwendungen und intelligente Prozessautomatisierung für Ihr Unternehmen.",
-      "address": {
-        "@type": "PostalAddress",
-        "streetAddress": "Listweg 4",
-        "addressLocality": "Dettingen",
-        "postalCode": "72581",
-        "addressCountry": "DE"
-      },
-      "geo": {
-        "@type": "GeoCoordinates",
-        "latitude": 48.5333,
-        "longitude": 9.3333
-      },
+
       "url": "https://www.joos-soft-solutions.de",
       "telephone": "+4901633058605",
       "email": "mika.joos@joos-soft-solutions.de",
@@ -69,14 +58,35 @@
         "url": "https://www.joos-soft-solutions.de/#about",
         "knowsAbout": ["Full-Stack Development", "Flask", "Django", "FastAPI", "React", "Python", "Prozessautomatisierung", "Desktop Application Development", "Data Science", "Datenmigration"]
       },
-      "areaServed": {
-        "@type": "GeoCircle",
-        "geoMidpoint": {
-          "@type": "GeoCoordinates",
-          "latitude": 48.5333,
-          "longitude": 9.3333
+      "areaServed": [
+        {
+          "@type": "City",
+          "name": "Dettingen an der Erms"
         },
-        "geoRadius": "100000"
+        {
+          "@type": "City",
+          "name": "Reutlingen"
+        },
+        {
+          "@type": "City",
+          "name": "Metzingen"
+        },
+        {
+          "@type": "City",
+          "name": "Bad Urach"
+        }
+      ],
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Listweg 4",
+        "addressLocality": "Dettingen an der Erms",
+        "postalCode": "72581",
+        "addressCountry": "DE"
+      },
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": 48.5333,
+        "longitude": 9.3333
       },
       "aggregateRating": {
         "@type": "AggregateRating",
