--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
     }
     </script>
     
-    <link href="tailwind.css" rel="stylesheet" />
+    <!-- CSS wird von Vite automatisch eingefügt -->
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="./src/index.tsx"></script>
+    <script type="module" src="/src/index.tsx"></script>
   </body>
 </html>
